--- a/appteste/templates/appteste/Empreendimento/atualizaEmp.html
+++ b/appteste/templates/appteste/Empreendimento/atualizaEmp.html
@@ -64,7 +64,7 @@
                 <label for="status" class="form-label"><strong>Ativo</strong></label>
             </div>
             <div style="text-align: center;">
-                <button type="" class="btn btn-confirm"><a href="{% url 'updateEmp' emp.id %}"></a><strong>Salvar</strong></button>
+                <button type="" class="btn btn-confirm"><a href="{% url 'updateEmp' emp.id %}"><strong>Salvar</strong></a></button>
             </div>
         </form>
     </div>
