--- a/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
+++ b/appteste/templates/appteste/Empreendimento/listaEmpreendimento.html
@@ -8,6 +8,7 @@
     <link href="{% static 'css/listas.css' %}" rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
 <style>
@@ -42,7 +43,7 @@
                     <th style="background-color: #28A394;">Cidade</th>
                     <th style="background-color: #28A394;">Custo</th>
                     <th style="background-color: #28A394;">Status</th>
-                    <th style="background-color: #28A394; width: 15%;">Editar / Remover</th>
+                    <th style="background-color: #28A394;">Editar / Remover</th>
                 </tr>
             </thead>
             <tbody>
@@ -65,8 +66,8 @@
                         {% endif %}
                     </td>
                     <td>
-                        <a href="{% url 'updateEmp' e.id %}" class="btn btn-warning btn-sm">Editar</a>
-                        <a href="{% url 'deleteEmp' e.id %}" class="btn btn-danger btn-sm">Remover</a>
+                        <a href="{% url 'updateEmp' e.id %}" class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
+                        <a href="{% url 'deleteEmp' e.id %}" class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
                     </td>
                 </tr>
                 <tr class="nested-table hidden">
@@ -81,7 +82,7 @@
                                         <th>Pendente</th>
                                         <th>Categoria</th>
                                         <th>Usuario</th>
-                                        <th>Adicionar/Editar/Remover</th>
+                                        <th>Editar/Remover</th>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -101,8 +102,10 @@
                                         <td>{{ m.Categoria_Financeira }}</td>
                                         <td>{{ m.Usuario }}</td>
                                         <td>
-                                            <a href="{% url 'updateGasto' m.id %}" class="btn btn-warning btn-sm">Editar</a>
-                                            <a href="{% url 'deleteGasto' m.id %}" class="btn btn-danger btn-sm">Remover</a>
+                                            <a href="{% url 'updateGasto' m.id %}"
+                                                class="btn btn-warning btn-sm"><i class="fas fa-edit"></i></a>
+                                            <a href="{% url 'deleteGasto' m.id %}"
+                                                class="btn btn-danger btn-sm"><i class="fas fa-trash"></i></a>
                                         </td>
 
                                         {% endif %}
@@ -119,7 +122,8 @@
                                                         Gasto</i></u></a></td>
                                     </tr>
                                     <tr>
-                                        <td><a href="{% url 'listaGastos' %}" style="color: black;"><u><i>Todos os Gastos</i></u></a></td>
+                                        <td><a href="{% url 'listaGastos' %}" style="color: black;"><u><i>Todos os
+                                                        Gastos</i></u></a></td>
                                     </tr>
                             </table>
                         </div>
