--- a/appteste/templates/registration/login.html
+++ b/appteste/templates/registration/login.html
@@ -15,7 +15,7 @@
         <img src="{% static 'imagens/LogoLucasa.png' %}" class="rounded" alt="LuCasa Incorporadora Logo">
     </div>
     <div class="login-container">
-        <h1>Login</h1>
+        <h1 style="color: white;">Login</h1>
         <form action="" method="POST">
             {% csrf_token %}
             {{ form.non_field_errors }}
