--- a/appteste/templates/appteste/Usuario/listaUsuario.html
+++ b/appteste/templates/appteste/Usuario/listaUsuario.html
@@ -5,37 +5,41 @@
 <head>
     {% load static %}
     <link href="{% static 'css/listas.css' %}" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Lista de Usuários</h2>
-            <button class="btn btn-success"><a href="../cadUsuario/">Novo Usuário</a></button>
+            <button class="btn btn-success"><a href="{% url 'cadUsuario' %}">Novo Usuário</a></button>
         </div>
 
-        <table class="table table-bordered table-hover table-striped table-responsive" id="usuarios">
+        <table class="table table-bordered table-hover table-striped" id="usuarios">
             <thead class="table-dark">
                 <tr>
                     <th style="background-color: #28A394;">Nome</th>
-                    <th style="background-color: #28A394;">Login</th>
                     <th style="background-color: #28A394;">Grupo</th>
-                    <th style="background-color: #28A394; width: 15%;">Editar / Remover</th>
+                    <th style="background-color: #28A394;">Último Login</th>
+                    <th style="background-color: #28A394;">Editar / Remover</th>
                 </tr>
             </thead>
             <tbody>
-                {% for usuario in obj %}
+                {% for u in usr %}
                 <tr>
-                    <td>{{ usuario.Nome }}</td>
-                    <td>{{ usuario.Login }}</td>
-                    <td>{{ usuario.Categoria_Usuario.Descricao }}</td>
+                    <td>{{ u.username }}</td>
+                    {% for g in u.groups.all %}
+                            <td>{{ g.name }}</td>
+                    {% endfor %}
+                    <td>{{ u.last_login }}</td>
                     <td style="text-align: center;">
-                        <a class="btn btn-warning btn-sm" href="{% url 'updateUsuario' usuario.id %}">
-                            <i class="bi bi-pencil"><strong>Editar</strong></i>
+                        <a class="btn btn-warning btn-sm" href="{% url 'updateUsuario' u.id %}">
+                            <i class="fas fa-edit"></i></i>
                         </a>
-                        <a class="btn btn-danger btn-sm" href="{% url 'deleteUsuario' usuario.id %}">
-                            <i class="bi bi-trash"><strong>Remover</strong></i>
+                        <a class="btn btn-danger btn-sm" href="{% url 'deleteUsuario' u.id %}">
+                            <i class="fas fa-trash"></i></i>
                         </a>
                     </td>
                 </tr>
@@ -43,29 +47,8 @@
             </tbody>
         </table>
 
-        <!---<div class="d-flex justify-content-center">
-            <nav aria-label="Navegação de página">
-                <ul class="pagination">
-                    <li class="page-item {% if emp.has_previous %}enabled{% else %}disabled{% endif %}">
-                        <a class="page-link" href="?page=1">Primeira</a>
-                    </li>
-                    <li class="page-item {% if emp.has_previous %}enabled{% else %}disabled{% endif %}">
-                        <a class="page-link" href="?page={{ emp.previous_page_number }}">Anterior</a>
-                    </li>
-                    {% for i in emp.paginator.page_range %}
-                        <li class="page-item {% if emp.number == i %}active{% endif %}">
-                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                        </li>
-                    {% endfor %}
-                    <li class="page-item {% if emp.has_next %}enabled{% else %}disabled{% endif %}">
-                        <a class="page-link" href="?page={{ emp.next_page_number }}">Próxima</a>
-                    </li>
-                    <li class="page-item {% if emp.has_next %}enabled{% else %}disabled{% endif %}">
-                        <a class="page-link" href="?page={{ emp.paginator.num_pages }}">Última</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>--->
-    {% endblock %}
+
 </body>
+{% endblock %}
+
 </html>
