--- a/appteste/templates/register.html
+++ b/appteste/templates/register.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Cadastro de Usuário</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    
+    <meta name='viewport' content='width=device-width'>
     {% load static %}
     <link href="{% static 'css/manutUsuario.css' %}" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    {% block content %}
 
 </head>
+
 <body>
-    <div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
-        <div class="card shadow p-4" style="width: 100%; max-width: 500px;">
-            <h3 class="text-center mb-4">Cadastro de Usuário</h3>
 
-            {% block content %}
-            <form method="POST">
-                {% csrf_token %}
-                
-                <!-- Exibe o formulário com classes do Bootstrap -->
-                <div class="mb-3">
-                    {{ form.as_p }}
-                </div>
+    <div class="form-container" style="text-align: center;">
 
-                <button type="submit" class="btn btn-primary w-100">Criar Usuário</button>
-            </form>
-            
-            <p class="text-center mt-3">
-                Já tem uma conta? Faça <a href="{% url 'login' %}"><strong>Login</strong></a>
-            </p>
-            {% endblock %}
-        </div>
+        <form class="" method="POST" action="{% url 'cadUsuario' %}">
+            {% csrf_token %}
+            <h1 class="register-title">Cadastro de Usuário</h1>
+            <hr>
+                <h4>{{form.username.label}}</h4>
+                {{form.username}}
+                <h4>{{form.email.label}}</h4>
+                {{form.email}}
+                <h4>{{form.password1.label}}</h4>
+                {{form.password1}}
+                <h4>{{form.password2.label}}</h4>
+                {{form.password2}}
+                <br>
+                <br>
+                <button type="submit" class="btn btn-success"> Create </button>
+        </form>
+        {{ form.errors }}
+
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+{% endblock %}
+
 </html>
