--- a/appteste/templates/appteste/cabecalho.html
+++ b/appteste/templates/appteste/cabecalho.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="../mostrarUsuarios/"><strong>Usuários</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../mostraCategorias/"><strong>Relatórios</strong></a>
+                        <a class="nav-link" href="../listaGastos/"><strong>Relatórios</strong></a>
                     </li>
                 </ul>
             </div>
