--- a/appteste/templates/register.html
+++ b/appteste/templates/register.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends "appteste/cabecalho.html" %}
+
+{% block content%}
+
+{% load static %}
 
 <head>
     <meta charset='utf-8'>
     <title>Cadastro de Usuário</title>
     <meta name='viewport' content='width=device-width'>
-    {% load static %}
     <link href="{% static 'css/manutUsuario.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    {% block content %}
-
 </head>
 
 <body>
@@ -32,6 +32,9 @@
                 <br>
                 <br>
                 <button type="submit" class="btn btn-success"> Create </button>
+                <button class="btn btn-danger" style="color: #ffffff">
+                    <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
+                </button>                
         </form>
         {{ form.errors }}
 
