--- a/appteste/templates/appteste/Gastos/atualizaGastos.html
+++ b/appteste/templates/appteste/Gastos/atualizaGastos.html
@@ -44,7 +44,7 @@
                 </select>
             </div>
             <div class="mb-3 text-center">
-                <button type="submit" class="btn btn-confirm">Cadastrar Gasto</button>
+                <button type="submit" class="btn btn-confirm">Editar Gasto</button>
             </div>
         </form>
     </div>
