--- a/appteste/templates/registration/login.html
+++ b/appteste/templates/registration/login.html
@@ -37,7 +37,7 @@
             </div>
         
             <button type="submit" class="btn btn-login">Entrar</button>
-            <a href="#" class="forgot-password">Esqueci a senha</a>
+            <!---<a href="#" class="forgot-password">Esqueci a senha</a>--->
             <hr>
             <div style="text-align: center;">
                 <!---<button type="" class="btn btn-outline-light btn-sm"><a href="../register/" style="color: white;">Criar Usuário</a></button>--->
