--- a/appteste/templates/register.html
+++ b/appteste/templates/register.html
@@ -31,7 +31,7 @@
                 {{form.password2}}
                 <br>
                 <br>
-                <button type="submit" class="btn btn-success"> Create </button>
+                <button type="submit" class="btn btn-success"> Cadastrar </button>
                 <button class="btn btn-danger" style="color: #ffffff">
                     <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
                 </button>                
