--- a/appteste/templates/appteste/Usuario/updateUser.html
+++ b/appteste/templates/appteste/Usuario/updateUser.html
@@ -16,9 +16,10 @@
 <body>
 
     <div class="form-container" style="text-align: center;">
-        <form class="" method="POST" action="{% url 'cadUsuario' %}">
+
+        <form class="" method="POST">
             {% csrf_token %}
-            <h1 class="register-title">Cadastro de Usuário</h1>
+            <h1 class="register-title">Edição de Usuário</h1>
             <hr>
                 <h4>{{form.username.label}}</h4>
                 {{form.username}}
@@ -30,7 +31,7 @@
                 {{form.password2}}
                 <br>
                 <br>
-                <button type="submit" class="btn btn-success"> Cadastrar </button>
+                <button type="submit" class="btn btn-success"><a href="{% url 'updateUsuario' usuario.id %}"></a> Cadastrar </button>
                 <button class="btn btn-danger" style="color: #ffffff">
                     <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
                 </button>                
