--- a/appteste/templates/register.html
+++ b/appteste/templates/register.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="form-container" style="text-align: center;">
-        <form class="" method="POST" action="{% url 'cadUsuario' %}">
+        <form class="" method="POST" >
             {% csrf_token %}
             <h1 class="register-title">Cadastro de Usuário</h1>
             <hr>
@@ -30,7 +30,9 @@
                 {{form.password2}}
                 <br>
                 <br>
-                <button type="submit" class="btn btn-success"> Cadastrar </button>
+                <button type="submit" class="btn btn-success">
+                    <a href="{% url 'cadUsuario' %}"> Cadastrar </a>
+                </button>
                 <button class="btn btn-danger" style="color: #ffffff">
                     <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
                 </button>                
