--- a/appteste/templates/appteste/Usuario/listaUsuario.html
+++ b/appteste/templates/appteste/Usuario/listaUsuario.html
@@ -14,7 +14,7 @@
     <div class="container mt-5">
         <div class="d-flex justify-content-between align-items-center mb-3">
             <h2>Lista de Usuários</h2>
-            <button class="btn btn-success"><a href="{% url 'cadUsuario' %}">Novo Usuário</a></button>
+            <button class="btn btn-success"><a href="{% url 'register' %}">Novo Usuário</a></button>
         </div>
 
         <table class="table table-bordered table-hover table-striped" id="usuarios">
