--- a/appteste/templates/appteste/Usuario/updateUser.html
+++ b/appteste/templates/appteste/Usuario/updateUser.html
@@ -14,20 +14,19 @@
 </head>
 
 <body>
-
     <div class="form-container" style="text-align: center;">
 
         <form class="" method="POST">
             {% csrf_token %}
             <h1 class="register-title">Edição de Usuário</h1>
             <hr>
-                <h4>{{form.username.label}}</h4>
-                {{form.username}}
-                <h4>{{form.email.label}}</h4>
-                {{form.email}}
+            <h4>{{form.username.label}}</h4>
+            {{form.username}}
+            <h4>{{form.email.label}}</h4>
+            {{form.email}}
                 <br>
                 <br>
-                <button type="submit" class="btn btn-success"><a href="{% url 'updateUsuario' usuario.id %}"></a> Cadastrar </button>
+                <button type="submit" class="btn btn-success"><a href="{% url 'updateUsuario' usuario.id %}"></a> Atualizar </button>
                 <button class="btn btn-danger" style="color: #ffffff">
                     <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
                 </button>                
