--- a/appteste/templates/register.html
+++ b/appteste/templates/register.html
@@ -16,28 +16,36 @@
 <body>
 
     <div class="form-container" style="text-align: center;">
-        <form class="" method="POST" >
+        <form class="" method="POST">
             {% csrf_token %}
             <h1 class="register-title">Cadastro de Usuário</h1>
             <hr>
-                <h4>{{form.username.label}}</h4>
-                {{form.username}}
-                <h4>{{form.email.label}}</h4>
-                {{form.email}}
-                <h4>{{form.password1.label}}</h4>
-                {{form.password1}}
-                <h4>{{form.password2.label}}</h4>
-                {{form.password2}}
-                <br>
-                <br>
-                <button type="submit" class="btn btn-success">
-                    <a href="{% url 'cadUsuario' %}"> Cadastrar </a>
-                </button>
-                <button class="btn btn-danger" style="color: #ffffff">
-                    <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
-                </button>                
+            <h4>{{form.username.label}}</h4>
+            {{form.username}}
+            <h4>{{form.email.label}}</h4>
+            {{form.email}}
+            <h4>{{form.password1.label}}</h4>
+            {{form.password1}}
+            <h4>{{form.password2.label}}</h4>
+            {{form.password2}}
+            {% for field in form %}
+                <p>
+                    {% if field.errors %}
+                        <ul class="errorlist">
+                            {% for error in field.errors %}
+                            <li>{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+                </p>
+            {% endfor %}
+            <br>
+            <br>
+            <input type="submit" class="btn btn-success" value="Cadastrar"/>
+            <button class="btn btn-danger" style="color: #ffffff">
+                <a href="../mostrarUsuarios/" style="color: inherit; text-decoration: none;"> Voltar </a>
+            </button>
         </form>
-        {{ form.errors }}
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
